fixed background, added some functionality for days of week, tasks not showing up yet

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -60,7 +60,7 @@
   border: 3px inset var(--LtGray);
 }
 
-.calendar-card {
+#calender-card {
   width: 13vw;
   min-height: 500px;
   padding: 10px;
